src/tests/fixtures/unions/DefineUnionTypeReferencingInputType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export default class Query {
  /** @GQLField */
  me: Actor;
}

/** @GQLType */
class User {
  /** @GQLField */
  name: string;
}

/** @GQLInput */
type Entity = {
  description: string;
};

/** @GQLUnion */
type Actor = User | Entity;

-----------------
OUTPUT
-----------------
src/tests/fixtures/unions/DefineUnionTypeReferencingInputType.invalid.ts:19:21 - error: Union type Actor can only include Object types, it cannot include Entity.

19 type Actor = User | Entity;
                       ~
